fead infinite scroll list page

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,8 +6,8 @@
     <link th:href="@{/css/index.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/index.js}"></script>
     <script type="text/javascript" th:src="@{/js/axios.js}"></script>
+    <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
     <link rel="icon" type="image/png" href="/img/favicon.png">
-
     <script>
         // Toggle Animation by Class
         window.addEventListener('scroll', function () {
