change research list css

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -26,3 +26,78 @@
     color: #0a53be !important;
     cursor: pointer;
 }
+
+
+/* Research Card */
+body {
+    background-color: #eee
+}
+
+.card {
+    border: none;
+    border-radius: 10px
+}
+
+.c-details span {
+    font-weight: 300;
+    font-size: 13px
+}
+
+/*.icon {*/
+/*    width: 50px;*/
+/*    height: 50px;*/
+/*    background-color: #eee;*/
+/*    border-radius: 15px;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    font-size: 39px*/
+/*}*/
+
+.badge span{
+    background-color: #fffbec;
+    width: 60px;
+    height: 25px;
+    border-radius: 5px;
+    display: flex;
+    color: #fed85d;
+    justify-content: center;
+    align-items: center
+}
+
+
+
+.badge-bg-almost span {
+    background-color: #FAD02E; /* 밝은 노란색 배경 */
+    color: #fff; /* 텍스트 색상을 흰색으로 변경 */
+}
+
+.badge-bg-progress span{
+    background-color: #53C8C8; /* 청록색 배경 */
+    color: #fff; /* 텍스트 색상을 흰색으로 변경 */
+}
+
+.badge-bg-end span{
+    background-color: #FF6B6B; /* 연분홍색 배경 */
+    color: #fff; /* 텍스트 색상을 흰색으로 변경 */
+}
+
+
+
+.progress {
+    height: 10px;
+    border-radius: 10px
+}
+
+.progress div {
+    background-color: red
+}
+
+.text1 {
+    font-size: 14px;
+    font-weight: 600
+}
+
+.text2 {
+    color: #a5aec0
+}
