--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -9,13 +9,53 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <div id="rs-list" class="container mt-5">
-        <!-- 카드로 표시될 Rs 데이터를 추가합니다. -->
-    </div>
+            <h1>설문 리스트</h1>
+        <div class="container mt-5 mb-3">
+            <div id="rs-list" class="row">
 
+                <div class="col-md-4">
+                    <div class="card p-3 mb-2">
+
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex flex-row align-items-center">
+                                <div class="ms-2 c-details">
+                                    <h6 class="mb-0">${rs.rs_title}</h6>
+                                    <span>1 days ago</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mt-1">
+                            <div class="badge badge-bg-almost"> <span>마감임박</span> </div>
+                            <div class="badge badge-bg-progress"> <span>작성중</span> </div>
+                            <div class="badge badge-bg-end"> <span>종료됨</span> </div>
+                        </div>
+
+                        <div class="mt-5">
+                            <h3 class="heading">${rs.rs_desc}</h3>
+                            <div class="mt-5">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="mt-3"> <span class="text1"> <span class="text2">${rs} - ${rs}</span></span> </div>
+                            </div>
+                        </div>
+
+                        <div>
+                            <a class="btn btn-primary"><span>수정</span></a>
+                            <a class="btn btn-secondary"><span>삭제</span></a>
+                            <a class="btn btn-danger"><span>시작</span></a>
+                            <a class="btn btn-info"><span>결과</span></a>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
     <div id="loading"></div>
-
-
     <script th:inline="javascript">
         /* [[${userRoles}]] 값을 JavaScript 객체로 파싱 */
         let userRoles = /*[[${userRoles}]]*/ {};
@@ -34,49 +74,140 @@
 
         function createCard(rs) {
 
-            let rsCardList = []
-
-            rsCardList.push(
+            let temp = []
+            // head
+            temp.push(
                 `
-            <div class="card" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">${rs.rs_title}</h5>
-                <p class="card-text">${rs.rs_desc}</p>`
-            )
-
-            rsCardList.push(
-                userRoles.includes('ROLE_ADMIN')?
-                    `<a href="/research/updateform/${rs.rs_seq}" class="btn btn-primary">수정</a>
-                    <a href="/research/delete/${rs.rs_seq}" class="btn btn-primary">삭제</a>`
-                    :``
-            )
-
-            rsCardList.push(
-                userRoles.includes('ROLE_USER')?
-                    `<a href="/research/updateform/${rs.rs_seq}" class="btn btn-primary">결과</a>
-                    <a href="/research/delete/${rs.rs_seq}" class="btn btn-primary">수정</a>`
-                    :``
-            )
-
-            rsCardList.push(
+                <div class="col-md-4">
+                    <div class="card p-3 mb-2">
                 `
-                <button href="#" class="btn btn-primary">Card link</button>
-                <button href="#" class="btn btn-secondary">Another link</button>
-<!--                권한이 있는 사람만 보이는 버튼-->
-
-              </div>
-            </div>
-`
             )
-            return rsCardList.join('')
+            // body
+            temp.push(
+                `
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex flex-row align-items-center">
+                                <div class="ms-2 c-details">
+                                    <h6 class="mb-0">${rs.rs_title}</h6>
+                                    <span>1 days ago</span>
+                                </div>
+                            </div>
+                        </div>
+                `
+            )
+            temp.push(
+                `
+                        <div class="mt-1">
+                            <div class="badge badge-bg-almost"> <span>마감임박</span> </div>
+                            <div class="badge badge-bg-progress"> <span>작성중</span> </div>
+                            <div class="badge badge-bg-end"> <span>종료됨</span> </div>
+                        </div>
+                `
+            )
+
+
+            temp.push(
+                `
+                        <div class="mt-5">
+                            <h3 class="heading">${rs.rs_desc}</h3>
+                            <div class="mt-5">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="mt-3"> <span class="text1"> <span class="text2">${rs.rs_start_date} - ${rs.rs_end_date}</span></span> </div>
+                            </div>
+                        </div>
+                `
+            )
+
+            temp.push(
+                `<div>`
+            )
+
+
+            temp.push(
+                userRoles.includes('ROLE_ADMIN') ?
+                    `
+                            <a href="/research/update/${rs.rs_seq}" class="btn btn-primary"><span>수정</span></a>
+                            <a href="/research/delete/${rs.rs_seq}" class="btn btn-secondary"><span>삭제</span></a>
+                    `
+                    : ``
+            )
+
+            temp.push(
+                userRoles.includes('ROLE_USER') ||userRoles.includes('ROLE_ADMIN') ?
+                    `
+                            <a href="/research/update/${rs.rs_seq}" class="btn btn-danger"><span>결과</span></a>
+                            <a href="/research/delete/${rs.rs_seq}" class="btn btn-info"><span>수정</span></a>
+                    `
+                    : ``
+            )
+
+
+            temp.push(
+                `
+                </div>
+                `
+            )
+
+
+
+
+
+            // tail
+            temp.push(
+                `
+                    </div>
+                </div>
+                `)
+
+
+
+
+//             temp.push(
+//                 `
+//             <div class="card">
+//               <div class="card-body">
+//                 <h5 class="card-title">${rs.rs_title}</h5>
+//                 <p class="card-text">${rs.rs_desc}</p>
+//
+// `
+//             )
+//
+//             temp.push(
+//                 userRoles.includes('ROLE_ADMIN') ?
+//                     `
+//                     <a href="/research/updateform/${rs.rs_seq}" class="btn btn-primary">수정</a>
+//                     <a href="/research/delete/${rs.rs_seq}" class="btn btn-primary">삭제</a>
+//                     `
+//                     : ``
+//             )
+//
+//             temp.push(
+//                 userRoles.includes('ROLE_USER') ?
+//                     `
+//                     <a href="/research/updateform/${rs.rs_seq}" class="btn btn-primary">결과</a>
+//                     <a href="/research/delete/${rs.rs_seq}" class="btn btn-primary">수정</a>
+//                     `
+//                     : ``
+//             )
+//
+//             temp.push(
+//                 `
+//               </div>
+//             </div>
+// `
+//             )
+            return temp.join('')
         }
 
         let noMoreData = false;
+
         function loadMoreData() {
             return $.get("/research/list2?page=" + page + "&size=" + size, function (data) {
                 console.log(data);
                 if (data.rsList.length === 0) {
-                    if(!noMoreData) alert("마지막 데이터입니다.");
+                    if (!noMoreData) alert("마지막 데이터입니다.");
                     noMoreData = true;
                     return;
                 }
@@ -87,6 +218,7 @@
                 });
             });
         }
+
         // 쓰로틀링을 적용한 스크롤 이벤트 핸들러
         // if (window.innerHeight + window.scrollY >= document.body.scrollHeight) {
         //     if (!timer) {
@@ -99,23 +231,23 @@
         let isLoading = false;
         let timer;
         $(window).scroll(function () {
-            if(noMoreData) return;
+            if (noMoreData) return;
             // console.log($(window).scrollTop() + $(window).height() , $(document).height())
-            if ($(window).scrollTop() + $(window).height()+ 10 >= $(document).height()) {
+            if ($(window).scrollTop() + $(window).height() + 10 >= $(document).height()) {
 
                 if (!timer) {
                     timer = setTimeout(() => {
                         timer = null;
-                        console.log("스크롤이 바닥에 닿았습니다.")
-                        loadMoreData().then(function (){
+                        console.log("hit bottom!");
+                        loadMoreData().then(function () {
                             isLoading = false;
                             handleLoading(isLoading);
                         });
                     }, 1000);
-                }else{
+                } else {
                     isLoading = true;
                     handleLoading(isLoading);
-                    console.log("스크롤 이벤트가 발생했지만 1초 이내에 처리하지 않습니다.")
+                    console.log("event ignored");
                 }
             }
         });
@@ -124,19 +256,19 @@
             loadMoreData(); // 페이지 로드 시 초기 데이터 로드
         });
 
-        function handleLoading(isLoading){
-            if(noMoreData){
+        function handleLoading(isLoading) {
+            if (noMoreData) {
                 $("#loading").html(
                     `<div class="d-flex justify-content-center">
                         <div class="alert alert-primary" role="alert">
-                          마지막 데이터입니다.
+                          end of data
                         </div>
                       </div>`
                 )
                 return;
             }
 
-            if(isLoading){
+            if (isLoading) {
                 $("#loading").html(
                     `<div class="d-flex justify-content-center">
                         <div class="spinner-border" role="status">
@@ -144,7 +276,7 @@
                         </div>
                       </div>`
                 )
-            }else{
+            } else {
                 $("#loading").html("")
             }
         }
