--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,7 +1,19 @@
+body{
+    margin-top: 10px;
+    background-image: url("../img/night_bg.jpg");
+    background-size: 100% 130%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: top;
+    background-color: #2c3034;
+}
+
+
 /* Navigation Bar */
 .navbar{
     padding: 20px 10px 20px 0;
-    background-color: #28a7e9;
+
+    background: transparent;
     transition: all ease 0.4s;
 }
 .navbar-brand{
@@ -13,13 +25,21 @@
     color: white;
 }
 
+.navbar-toggler{
+    border: none;
+    outline: none !important;
+    opacity: 0.8;
+}
+
 /* Animation */
-.animate{
+.navbar-animate{
     padding: 0 10px 0 0;
     transition: all ease 0.4s;
+    background-color: #1e2125;
+    /*background: transparent;*/
 }
 .navbar:hover{
-    background-color: #1b6ca8;
+    background-color: #1e2125;
 }
 
 .nav-link:hover{
@@ -29,18 +49,19 @@
 
 
 /* Research Card */
-body {
-    background-color: #eee
+.card-container {
+   opacity: 0.95;
 }
 
 .card {
     border: none;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .c-details span {
     font-weight: 300;
-    font-size: 13px
+    font-size: 13px;
+
 }
 
 /*.icon {*/
@@ -62,7 +83,7 @@ body {
     display: flex;
     color: #fed85d;
     justify-content: center;
-    align-items: center
+    align-items: center;
 }
 
 
