--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,12 +7,13 @@
     <title>Title</title>
 </head>
 <body>
-<nav th:fragment="navbar" class="navbar navbar-expand-lg fixed-top navbar-default" id="nav-layout">
+<nav th:fragment="navbar" id="navbar-layout" class="navbar navbar-expand-lg fixed-top navbar-default">
     <div class="container">
-        <a href="#" class="navbar-brand ">Company Logo</a>
+        <a href="/" class="navbar-brand ">Company Logo</a>
         <button type="button" class="navbar-toggler shadow-none" data-bs-toggle="collapse" data-bs-target="#resNav">
-            <!--            <span class="navbar-toggler-icon"></span>-->
-            <img alt="" src="/img/blue-burger-menu.png" width="40" height="40">
+<!--            흰색 버거 아이콘-->
+<!--            <span class="navbar-toggler-bugger"> </span>-->
+            <img alt="" src="/img/white-burger-menu-icon.png" width="40" height="40">
         </button>
         <div class="collapse navbar-collapse" id="resNav">
             <div th:if="${#authorization.expression('isAuthenticated()')}" class="d-flex align-items-center">
@@ -20,45 +21,35 @@
                 <p class="text-white m-0 me-3">Welcome, <span th:text="${#authentication.principal.name}"></span>!</p>
             </div>
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a th:href="@{/}" class="nav-link text-white border-0 bg-transparent">Home</a></li>
-                <li class="nav-item"><a th:href="@{/research/list}" class="nav-link text-white border-0 bg-transparent">List</a></li>
-                <li class="nav-item"><a th:href="@{/user/test}" class="nav-link text-white border-0 bg-transparent">UserPage</a></li>
+                <li class="nav-item"><a th:href="@{/}" class="nav-link ">Home</a></li>
+                <li class="nav-item"><a th:href="@{/research/list}" class="nav-link ">List</a></li>
+                <li class="nav-item"><a th:href="@{/user/test}" class="nav-link ">UserPage</a></li>
                 <li th:if="${#authorization.expression('isAuthenticated()')}" class="nav-item">
                     <!-- 로그인한 사용자 -->
-                    <a th:href="@{/auth/profile}" class="nav-link text-white border-0 bg-transparent">Profile</a>
+                    <a th:href="@{/auth/profile}" class="nav-link ">Profile</a>
                 </li>
                 <li th:unless="${#authorization.expression('isAuthenticated()')}" class="nav-item">
                     <!-- 로그인하지 않은 사용자만 볼 수 있는 내용 -->
-                    <a th:href="@{/auth/login}" class="nav-link text-white border-0 bg-transparent">Login</a>
+                    <a th:href="@{/auth/login}" class="nav-link ">Login</a>
                 </li>
                 <li th:if="${#authorization.expression('isAuthenticated()')}" class="nav-item">
                     <!-- 로그인한 사용자 -->
-                    <a th:href="@{/auth/logout}" class="nav-link text-white border-0 bg-transparent">Logout</a>
+                    <a th:href="@{/auth/logout}" class="nav-link ">Logout</a>
                 </li>
                 <li th:unless="${#authorization.expression('isAuthenticated()')}" class="nav-item">
                     <!-- 로그인하지 않은 사용자만 볼 수 있는 내용 -->
-                    <a th:href="@{/auth/register}" class="nav-link text-white border-0 bg-transparent">SignIn</a>
+                    <a th:href="@{/auth/register}" class="nav-link ">SignIn</a>
                 </li>
 <!--                admin 전용-->
                 <li th:if="${#authorization.expression('hasRole(''ADMIN'')')}" class="nav-item">
                     <!-- 로그인한 사용자 -->
-                    <a th:href="@{/admin/test}" class="nav-link text-white border-0 bg-transparent">Admin전용</a>
+                    <a th:href="@{/admin/test}" class="nav-link ">Admin전용</a>
                 </li>
 
             </ul>
         </div>
     </div>
 </nav>
-<script>
-    // 특정 스크롤 이상 했을 때 애니메이션 효과를 주는 코드
-    window.addEventListener('scroll', function () {
-        if (window.scrollY > 100) {
-            document.querySelector('nav').classList.add('animate');
-        } else {
-            document.querySelector('nav').classList.remove('animate');
-        }
-    });
-</script>
 
 </body>
 </html>
