--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -13,43 +13,43 @@
         <div class="container mt-5 mb-3">
             <div id="rs-list" class="row">
 
-                <div class="col-md-4">
-                    <div class="card p-3 mb-2">
+<!--                <div class="card-container col-md-4">-->
+<!--                    <div class="card p-3 mb-2">-->
 
-                        <div class="d-flex justify-content-between">
-                            <div class="d-flex flex-row align-items-center">
-                                <div class="ms-2 c-details">
-                                    <h6 class="mb-0">${rs.rs_title}</h6>
-                                    <span>1 days ago</span>
-                                </div>
-                            </div>
-                        </div>
+<!--                        <div class="d-flex justify-content-between">-->
+<!--                            <div class="d-flex flex-row align-items-center">-->
+<!--                                <div class="ms-2 c-details">-->
+<!--                                    <h6 class="mb-0">${rs.rs_title}</h6>-->
+<!--                                    <span>1 days ago</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
-                        <div class="mt-1">
-                            <div class="badge badge-bg-almost"> <span>마감임박</span> </div>
-                            <div class="badge badge-bg-progress"> <span>작성중</span> </div>
-                            <div class="badge badge-bg-end"> <span>종료됨</span> </div>
-                        </div>
+<!--                        <div class="mt-1">-->
+<!--                            <div class="badge badge-bg-almost"> <span>마감임박</span> </div>-->
+<!--                            <div class="badge badge-bg-progress"> <span>작성중</span> </div>-->
+<!--                            <div class="badge badge-bg-end"> <span>종료됨</span> </div>-->
+<!--                        </div>-->
 
-                        <div class="mt-5">
-                            <h3 class="heading">${rs.rs_desc}</h3>
-                            <div class="mt-5">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <div class="mt-3"> <span class="text1"> <span class="text2">${rs} - ${rs}</span></span> </div>
-                            </div>
-                        </div>
+<!--                        <div class="mt-5">-->
+<!--                            <h3 class="heading">${rs.rs_desc}</h3>-->
+<!--                            <div class="mt-5">-->
+<!--                                <div class="progress">-->
+<!--                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--                                </div>-->
+<!--                                <div class="mt-3"> <span class="text1"> <span class="text2">${rs} - ${rs}</span></span> </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
-                        <div>
-                            <a class="btn btn-primary"><span>수정</span></a>
-                            <a class="btn btn-secondary"><span>삭제</span></a>
-                            <a class="btn btn-danger"><span>시작</span></a>
-                            <a class="btn btn-info"><span>결과</span></a>
-                        </div>
+<!--                        <div>-->
+<!--                            <a class="btn btn-primary"><span>수정</span></a>-->
+<!--                            <a class="btn btn-secondary"><span>삭제</span></a>-->
+<!--                            <a class="btn btn-danger"><span>시작</span></a>-->
+<!--                            <a class="btn btn-info"><span>결과</span></a>-->
+<!--                        </div>-->
 
-                    </div>
-                </div>
+<!--                    </div>-->
+<!--                </div>-->
 
 
             </div>
@@ -78,7 +78,7 @@
             // head
             temp.push(
                 `
-                <div class="col-md-4">
+                <div class="card-container col-md-4 my-3">
                     <div class="card p-3 mb-2">
                 `
             )
