--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -49,6 +49,12 @@
             </ul>
         </div>
     </div>
+
+<!--    scroller to top button-->
+    <div class="scroll-to-top" onclick="scrollToTop()">
+        <i class="fa fa-angle-up">TOP</i>
+    </div>
+
 </nav>
 
 </body>
