--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
 >
 <footer th:fragment="footer" style="border: solid 1px blue">
 <!--    sessionstage 의 정보를 이용해 표시-->
-    <h1 id="footer-context">Footer 영역</h1>
+    <h1 id="footer-context" class="text-white">Footer 영역</h1>
 
 </footer>
 </html>
