--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,18 +1,22 @@
 body{
     margin-top: 10px;
-    background-image: url("../img/night_bg.jpg");
+    background-image: url("../img/toronto_bg.png");
     background-size: 100% 130%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
-    background-color: rgb(15, 31, 46);
+    background-color: rgb(7, 3, 2);
+}
+
+.bottom-10{
+    bottom: 10%;
+    !important;
 }
 
 
 /* Navigation Bar */
 .navbar{
     padding: 20px 10px 20px 0;
-
     background: transparent;
     transition: all ease 0.4s;
 }
@@ -78,6 +82,11 @@ body{
 .navbar:hover{
     background-color: #1e2125;
 }
+
+.navbar-no-hover:hover{
+    background-color: transparent;
+}
+
 
 .nav-link:hover{
     color: #0a53be !important;
@@ -158,4 +167,19 @@ body{
 
 .text2 {
     color: #a5aec0
+}
+
+/* Side bar */
+.rs-sidebar{
+    position: fixed;
+    top: 10%;
+    left: 0;
+    width: 250px;
+    height: 80%;
+    max-height: 80%; /* 최대 높이를 지정 */
+    background: #1e2125;
+    z-index: 99;
+    transition: all ease 0.4s;
+    overflow-y: auto; /* 세로 스크롤 추가 */
+    overflow-x: hidden; /* 가로 스크롤 숨김 */
 }
