--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,22 +9,25 @@
 <body>
 <div layout:fragment="content">
     <div>
-        <h1 th:inline="text">Hello [[${#authentication.name}]]!</h1>
-        <div>
-            <h2>Welcome, <span sec:authentication="name"></span></h2>
-            <p>Your roles: <span sec:authentication="principal.authorities"></span></p>
-        </div>
-        <div th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
-            <p>Admin</p>
-        </div>
-        <div th:if="${#authorization.expression('hasRole(''USER'')')}">
-            <p>User</p>
-        </div>
+        <div class="container text-white">
+            <h1 th:inline="text">Hello [[${#authentication.name}]]!</h1>
 
-        <div th:if="${#authorization.expression('isAuthenticated()')}">
-            <p>You are logged in.</p>
-        </div>
+            <div>
+                <h2>Welcome, <span sec:authentication="name"></span></h2>
+                <p>Your roles: <span sec:authentication="principal.authorities"></span></p>
+            </div>
+            <div th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
+                <p>Admin</p>
+            </div>
+            <div th:if="${#authorization.expression('hasRole(''USER'')')}">
+                <p>User</p>
+            </div>
 
+            <div th:if="${#authorization.expression('isAuthenticated()')}">
+                <p>You are logged in.</p>
+            </div>
+
+        </div>
     </div>
 </div>
 </body>
