--- a/src/main/resources/templates/pages/research/listform.html
+++ b/src/main/resources/templates/pages/research/listform.html
@@ -9,7 +9,15 @@
 </head>
 <body>
 <div layout:fragment="content">
-            <h1>설문 리스트</h1>
+    <div class="container mt-5 mb-3">
+        <div>
+            <h1 class="text-white">Research List</h1>
+            <div class="d-flex justify-content-end">
+                <a href="/research/create" class="btn btn-primary">Create</a>
+            </div>
+        </div>
+    </div>
+
         <div class="container mt-5 mb-3">
             <div id="rs-list" class="row">
 
@@ -205,7 +213,7 @@
 
         function loadMoreData() {
             return $.get("/research/list2?page=" + page + "&size=" + size, function (data) {
-                console.log(data);
+                console.log(data.rsList);
                 if (data.rsList.length === 0) {
                     if (!noMoreData) alert("마지막 데이터입니다.");
                     noMoreData = true;
@@ -232,7 +240,6 @@
         let timer;
         $(window).scroll(function () {
             if (noMoreData) return;
-            // console.log($(window).scrollTop() + $(window).height() , $(document).height())
             if ($(window).scrollTop() + $(window).height() + 10 >= $(document).height()) {
 
                 if (!timer) {
@@ -271,7 +278,7 @@
             if (isLoading) {
                 $("#loading").html(
                     `<div class="d-flex justify-content-center">
-                        <div class="spinner-border" role="status">
+                        <div class="spinner-border text-light" role="status">
                           <span class="visually-hidden">Loading...</span>
                         </div>
                       </div>`
