add default createform toggle button

--- a/src/main/resources/templates/common/noScroll-Layout.html
+++ b/src/main/resources/templates/common/noScroll-Layout.html
@@ -13,7 +13,7 @@
 <!--<div th:replace="~{fragments/spacer :: spacer(15)}"></div>-->
 
 
-    <div id="layout-content" class="position-absolute top-0" layout:fragment="content">
+    <div id="layout-content" layout:fragment="content">
     </div>
 
 </body>
