--- a/src/main/resources/templates/fragments/noScroll-navbar.html
+++ b/src/main/resources/templates/fragments/noScroll-navbar.html
@@ -7,7 +7,7 @@
     <title>Title</title>
 </head>
 <body>
-<nav th:fragment="navbar" id="navbar-layout" class="navbar justify-content-end navbar-no-hover navbar-expand-lg fixed-top navbar-default position-relative">
+<nav th:fragment="navbar" id="navbar-layout" class="navbar justify-content-end navbar-no-hover index navbar-expand-lg fixed-top navbar-default position-relative">
     <div class="container d-flex justify-content-end position-absolute">
         <button type="button" class="navbar-toggler shadow-none " data-bs-toggle="collapse" data-bs-target="#resNav">
 <!--            흰색 버거 아이콘-->
