--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -83,6 +83,10 @@ body{
     background-color: #1e2125;
 }
 
+.navbar-no-hover{
+    z-index: 0;
+}
+
 .navbar-no-hover:hover{
     background-color: transparent;
 }
@@ -169,17 +173,46 @@ body{
     color: #a5aec0
 }
 
-/* Side bar */
-.rs-sidebar{
-    position: fixed;
-    top: 10%;
-    left: 0;
-    width: 250px;
-    height: 80%;
-    max-height: 80%; /* 최대 높이를 지정 */
+.sidebar-container{
     background: #1e2125;
-    z-index: 99;
+    opacity: 0.8;
+    /*background: transparent;*/
+    left: 0;
+    width: 13em;
     transition: all ease 0.4s;
-    overflow-y: auto; /* 세로 스크롤 추가 */
+}
+/* Side bar */
+.sidebar{
+
+    list-style: none;
+    /*left: 0;*/
+    margin: 0;
+    padding: 0;
+    /*position: absolute;*/
+    /*top: 10%;*/
+    /*left: 0;*/
+    width: 15em;
+    /*height: 80%;*/
+    /*max-height: 80%; !* 최대 높이를 지정 *!*/
+    /*background: #1e2125;*/
+    z-index: 99;
+    /*transition: all ease 0.4s;*/
+    overflow-y: scroll; /* 세로 스크롤 추가 */
     overflow-x: hidden; /* 가로 스크롤 숨김 */
 }
+
+
+.sidebar-container.hide{
+    left: -15em;
+
+}
+
+
+.sidebar-toggle.hide{
+    top: 2em;
+    left: -15em;
+}
+
+
+
+
