--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -8,41 +8,26 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <div class="d-flex flex-column vh-100 flex-shrink-0 p-3 text-white bg-dark" style="width: 250px;">
-        <div href="/"
-           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"></svg>
-            <span class="fs-4">BBBootstrap</span>
+<!--    토글 버튼-->
+    <button class="sidebar-toggle hide shadow-none bg-transparent btn btn-toolbar position-absolute">
+        <img alt="" src="/img/white-burger-menu-icon.png" width="10px" height="10px">
+    </button>
+    <div class="sidebar-container position-absolute top-0 overflow-hidden d-flex flex-column vh-100 flex-shrink-0 py-3 text-white ">
+        <div class="d-flex align-items-center m-0 text-white text-decoration-none">
+            <!--    토글 버튼-->
+            <h5 class="mx-auto">Create</h5>
+            <button class="sidebar-toggle shadow-none bg-transparent btn btn-toolbar">
+                <img alt="" src="/img/white-burger-menu-icon.png" width="10px" height="10px">
+            </button>
         </div>
         <hr>
-        <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"> <i
-                    class="fa fa-home"></i><span class="ms-2">Home</span> </a></li>
-            <li><a href="#" class="nav-link text-white"> <i class="fa fa-dashboard"></i><span
-                    class="ms-2">Dashboard</span> </a></li>
-            <li><a href="#" class="nav-link text-white"> <i class="fa fa-first-order"></i><span
-                    class="ms-2">My Orders</span> </a></li>
-            <li><a href="#" class="nav-link text-white"> <i class="fa fa-cog"></i><span class="ms-2">Settings</span>
-            </a></li>
-            <li><a href="#" class="nav-link text-white"> <i class="fa fa-bookmark"></i><span
-                    class="ms-2">Bookmarks</span> </a></li>
+        <ul class="sidebar flex-column">
+            <li><a href="#" class="nav-link text-white" aria-current="page"><span class="ms-2">Question1</span> </a></li>
+
         </ul>
         <hr>
-        <div class="dropdown"><a href="#"
-                                 class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                                 id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false"> <img
-                src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2"> <strong>
-            John W </strong> </a>
-            <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="#">New project</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
-            </ul>
-        </div>
+        FOOTER
+
     </div>
     <div class="container ms-0 ps-0">
         <!--    sidebar-->
@@ -51,6 +36,24 @@
     </div>
 
 
+    <script>
+        // Toggle the side navigation
+        const sidebarToggle = document.body.querySelectorAll('.sidebar-toggle');
+        sidebarToggle.forEach((toggle) => {
+            toggle.addEventListener('click', () => {
+                if(document.querySelector(".sidebar-container").classList.contains("hide"))
+                    document.querySelector(".sidebar-container").classList.remove("hide")
+                else document.querySelector(".sidebar-container").classList.add("hide")
+
+                if(document.querySelector(".sidebar-toggle").classList.contains("hide"))
+                    document.querySelector(".sidebar-toggle").classList.remove("hide")
+                else document.querySelector(".sidebar-toggle").classList.add("hide")
+
+
+
+            });
+        });
+    </script>
 </div>
 </body>
 </html>
