--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -2,7 +2,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>OnedayToday</title>
     <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
-    <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
+<!--    <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>-->
 <!--    popper-->
 <!--    <script type="text/javascript" th:src="@{/js/cjs/popper.js}"></script>-->
 <!--    <script type="text/javascript" th:src="@{/js/cjs/popper-base.js}"></script>-->
