--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{common/noScroll-Layout}">
 <head>
@@ -8,52 +9,21 @@
 </head>
 <body>
 <div layout:fragment="content">
-<!--    토글 버튼-->
-    <button class="sidebar-toggle hide shadow-none bg-transparent btn btn-toolbar position-absolute">
-        <img alt="" src="/img/white-burger-menu-icon.png" width="10px" height="10px">
-    </button>
-    <div class="sidebar-container position-absolute top-0 overflow-hidden d-flex flex-column vh-100 flex-shrink-0 py-3 text-white ">
-        <div class="d-flex align-items-center m-0 text-white text-decoration-none">
-            <!--    토글 버튼-->
-            <h5 class="mx-auto">Create</h5>
-            <button class="sidebar-toggle shadow-none bg-transparent btn btn-toolbar">
-                <img alt="" src="/img/white-burger-menu-icon.png" width="10px" height="10px">
-            </button>
+    <div th:replace="~{fragments/sidebar :: sidebar}"></div>
+
+
+
+
+<!--    main content-->
+    <div class="container main-content main-content-toggle">
+        <div class="text-white  overflow-hidden">
+
+        Main Content
         </div>
-        <hr>
-        <ul class="sidebar flex-column">
-            <li><a href="#" class="nav-link text-white" aria-current="page"><span class="ms-2">Question1</span> </a></li>
-
-        </ul>
-        <hr>
-        FOOTER
-
-    </div>
-    <div class="container ms-0 ps-0">
-        <!--    sidebar-->
-
-
     </div>
 
 
-    <script>
-        // Toggle the side navigation
-        const sidebarToggle = document.body.querySelectorAll('.sidebar-toggle');
-        sidebarToggle.forEach((toggle) => {
-            toggle.addEventListener('click', () => {
-                if(document.querySelector(".sidebar-container").classList.contains("hide"))
-                    document.querySelector(".sidebar-container").classList.remove("hide")
-                else document.querySelector(".sidebar-container").classList.add("hide")
 
-                if(document.querySelector(".sidebar-toggle").classList.contains("hide"))
-                    document.querySelector(".sidebar-toggle").classList.remove("hide")
-                else document.querySelector(".sidebar-toggle").classList.add("hide")
-
-
-
-            });
-        });
-    </script>
 </div>
 </body>
 </html>
