--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 <div layout:fragment="content">
+    <script th:inline="javascript">
+        /* [[${registrationRSDTO}]] 값을 JavaScript 객체로 파싱 */
+        let registrationRSDTO = /*[[${registrationRSDTO}]]*/ {};
+    console.log(registrationRSDTO)
+    </script>
     <div th:replace="~{fragments/sidebar :: sidebar}"></div>
 
 
